--- a/client/src/App.css
+++ b/client/src/App.css
@@ -87,6 +87,13 @@ input[type="text"] {
   box-sizing: border-box;
   border-radius: 5px;
 }
+input[type="password"] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border-radius: 5px;
+}
 .register {
   margin: auto;
   width: 50%;
@@ -202,6 +209,7 @@ input[type="text"] {
   display: flex;
 }
 .results {
+  padding: 15px;
   margin: auto;
   margin-top: 25px;
   width: 50%;
@@ -209,7 +217,6 @@ input[type="text"] {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  justify-content: space-around;
   box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px,
     rgba(6, 24, 44, 0.65) 0px 4px 6px -1px,
     rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
