--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,7 +14,43 @@ nav {
   display: flex;
   justify-content: space-around;
 }
-
+.home {
+  position: relative;
+  height: 90vh;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.corner-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  text-align: start;
+}
+.description {
+  padding: 50px;
+  border-radius: 15px;
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px,
+    rgba(6, 24, 44, 0.65) 0px 4px 6px -1px,
+    rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+}
+.empty-button {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+}
+.small-icons {
+  width: 30px;
+  height: 30px;
+}
+.room-info {
+  display: flex;
+  justify-content: center;
+}
 .join-room {
   padding-bottom: 25px;
   margin: auto;
@@ -74,11 +110,11 @@ nav {
   transform: translateY(0);
 }
 .register-login {
-  margin: auto;
+  padding-top: 35px;
   width: 50%;
   width: 400px;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
 }
 input[type="text"] {
   width: 100%;
@@ -95,6 +131,7 @@ input[type="password"] {
   border-radius: 5px;
 }
 .register {
+  height: 80vh;
   margin: auto;
   width: 50%;
   width: 800px;
@@ -106,6 +143,7 @@ input[type="password"] {
   margin: auto;
   width: 50%;
   width: 800px;
+  height: 80vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
